[tool.poetry]
name = "Create ML Notebook"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7.1"
numpy = "^1.19.2"
tensorflow = "^2.4.1"
pandas = "^1.2.3"
scikit-learn = "^0.24.1"
jupyter = "^1.0.0"
ipykernel = "^5.5.0"
matplotlib = "^3.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
